
1.7
===
- Removed dependencies on commons-lang and commons-codec. Jasypt can now operate
  without depedencies on JDK version >= 6.
- Added class org.jasypt.registry.AlgorithmRegistry with utility methods for 
  obtaining the names of all the available digest/PBE algorithms.
- Created "lite" .jar package including only standard String and Byte digest and 
  encryption: no BigDecimal or BigInteger encryption, no "util" package, 
  no Spring/Hibernate/Wicket integrations, no Web PBE configuration, no CLI utils, 
  no properties encryption, no Zero salt generator.
- Added method "getInvertPositionOfSaltInMessageBeforeDigesting()" to DigesterConfig
  and "setInvertPositionOfSaltInMessageBeforeDigesting(...)" to StandardByteDigester 
  and StandardStringDigester in order to being able to append the salt after the message
  before digesting instead of the default behaviour (insert it before the message).
  This is useful for enhancing compatibility with some common LDAP password encryption
  schemes like {SSHA}.
- Added method "getInvertPositionOfPlainSaltInEncryptionResults()" to DigesterConfig
  and "setInvertPositionOfPlainSaltInEncryptionResults(...)" to StandardByteDigester 
  and StandardStringDigester in order to being able to append the plain (unhashed) 
  salt after the digest instead of the default behaviour (insert it before the digest).
  This is useful for enhancing compatibility with some common LDAP password encryption
  schemes like {SSHA}.
- Added method "getUseLenientSaltSizeCheck()" to DigesterConfig and 
  "setUseLenientSaltSizeCheck(...)" to StandardByteDigester 
  and StandardStringDigester in order to allow digesters to check digests created
  with any size of salt (not equal to the value set for the "saltSizeBytes" property).
- Added an "org.jasypt.util.password.rfc2307" package containing utility classes for
  password encryption operations according to common LDAP schemes like {MD5},
  {SHA}, {SMD5} and {SSHA}.